Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1473

some leaks in thread_unix.c and thread_pool.c

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 1.7.0
    • 1.7.0
    • util
    • None
    • linux

    Description

      some leaks in thread_unix.c and thread_pool.c:

      Index: util/src/platforms/unix/thread_unix.c
      ===================================================================
      — util/src/platforms/unix/thread_unix.c (revision 924674)
      +++ util/src/platforms/unix/thread_unix.c (working copy)
      @@ -112,6 +112,7 @@
      new->td = (pthread_t *)AXIS2_MALLOC(allocator, sizeof(pthread_t));
      if(!new->td)

      { + AXIS2_FREE(allocator, new); return NULL; }

      @@ -132,6 +133,8 @@

      { return new; }

      + AXIS2_FREE(allocator, new->td);
      + AXIS2_FREE(allocator, new);
      return NULL;
      }

      Index: util/src/thread_pool.c
      ===================================================================
      — util/src/thread_pool.c (revision 924674)
      +++ util/src/thread_pool.c (working copy)
      @@ -143,5 +143,10 @@

      { AXIS2_ERROR_FREE(thread_env->error); }

      + axutil_allocator_t *allocator = NULL;
      + allocator = thread_env->allocator;
      AXIS2_FREE(thread_env->allocator, thread_env);
      + if (allocator)

      { + AXIS2_FREE(allocator, allocator); + }

      }

      Attachments

        Activity

          People

            Unassigned Unassigned
            springi99 Robert Springer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: