AXIS2C-1473 some leaks in thread_unix.c and thread_pool.c